# data-for-ml-hw

./: .gitignore  README.md  clean.py  eda.py  embed.py  nulls.py  preproc.py  pydoll_extension.py  pyproject.toml  scrap.py  viz.py
src/receipt_ai/defs/: __init__.py
src/receipt_ai/defs/additional_data/: assets.py
src/receipt_ai/defs/clean/: assets.py
src/receipt_ai/defs/embed/: assets.py  resources.py
src/receipt_ai/defs/preprocess/: assets.py
src/receipt_ai/defs/scrape/: assets.py  resources.py
