[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["Albert Fazlyev <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydoll-python = "^1.7.0"
dotenv = "^0.9.9"
numpy = "^2.2.4"
httpx = "^0.28.1"
polars = "^1.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
