[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["Albert Fazlyev <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydoll-python = "^1.7.0"
dotenv = "^0.9.9"
numpy = "^2.2.4"
httpx = "^0.28.1"
polars = "^1.27.1"
plotly = "^6.0.1"
transformers = "^4.51.3"
umap-learn = "^0.5.7"
sentence-transformers = "^4.1.0"
pyarrow = "^19.0.1"
pandas = "^2.2.3"
hdbscan = "^0.8.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
